tests/trybuild/stages/unexpected_command_last.rs
use brood::system::schedule::stages;

type Stages = stages!{
    flush,
    unexpected,
};

fn main() {}
